[tool.poetry]
name = "refurbot"
version = "0.1.0"
description = "A serverless bot that tweets the best refurnished product deals from the Apple"
authors = ["Maurizio branca <maurizio.branca@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
refurbished = "^0.5.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
